--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+ADMOB_APP_ID=ca-app-pub-3150717277102846~6927017371
+INTERSTITIAL_AD_ID=ca-app-pub-3150717277102846/2692258897
