chore(secrets): remove AdMob IDs from history and externalize via local.properties placeholders

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-ADMOB_APP_ID=ca-app-pub-3150717277102846~6927017371
-INTERSTITIAL_AD_ID=ca-app-pub-3150717277102846/2692258897
+# AdMob IDs removed from version control. Define them in an ignored file (local.properties) instead:
+# Example placeholders to add in local.properties (do NOT commit):
+# ADMOB_APP_ID=ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
+# INTERSTITIAL_AD_ID=ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
