--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 local.properties
 gradle.properties
 # gradle.properties is now ignored to avoid committing sensitive values; project-wide settings will rely on defaults if absent
+.idea
